RESOLVED FIXED52757
If resetting between tests times out, treat it as a WebProcess crash
https://bugs.webkit.org/show_bug.cgi?id=52757
Summary If resetting between tests times out, treat it as a WebProcess crash
Maciej Stachowiak
Reported 2011-01-19 15:30:43 PST
If resetting between tests times out, treat it as a WebProcess crash
Attachments
Patch (1.19 KB, patch)
2011-01-19 15:33 PST, Maciej Stachowiak
andersca: review+
Maciej Stachowiak
Comment 1 2011-01-19 15:33:25 PST
Maciej Stachowiak
Comment 2 2011-01-19 16:13:36 PST
Note You need to log in before you can comment on or make changes to this bug.