2011-01-19  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Anders Carlsson.

        If resetting between tests times out, treat it as a WebProcess crash
        https://bugs.webkit.org/show_bug.cgi?id=52757

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::runTest):


Canonical link: https://commits.webkit.org/66416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76178 268f45cc-cd09-0410-ab3c-d52691b4dbfc